--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
 
 <main id = "perfume-product">
-  <section id = "perfume-image"></section>
-  <section id = "pefume-text">
+    <img src = "images/image-product-desktop.jpg">
+  <section id = "perfume-text">
     <p>PERFUME</p>
     <h1 id = "perfume-title">Gabrielle Essence Eau De Parfum</h1>
     <p> A floral, solar and voluptuous interpretation composed by Olivier Polge, 
