--- a/index.html
+++ b/index.html
@@ -6,10 +6,6 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
-
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
   <title>Frontend Mentor | Product preview card component</title>
 </head>
 <body>
@@ -25,7 +21,7 @@
         <h1 id = "perfume-new-price">$149.99</h1>
         <p id = "perfume-old-price">$169.99</p>
       </div>
-      <button id = "perfume-cart"> Add to Cart</button>
+      <button id = "perfume-cart"><img src = "images/icon-cart.svg">Add to Cart</button>
   </section>
 </main>
   
