--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | Product preview card component</title>
@@ -13,21 +12,21 @@
 <main class = "perfume-product">
   <div class = "perfume-picture"></div>
   <section id = "perfume-text">
-    <p id = "perfume-starter">PERFUME</p>
+    <p id = "perfume-starter">P E R F U M E</p>
     <h1 id = "perfume-title">Gabrielle Essence Eau De Parfum</h1>
     <p id = "perfume-pitch"> A floral, solar and voluptuous interpretation composed by Olivier Polge, 
       Perfumer-Creator for the House of CHANEL.</p>
       <div class = "price">
-        <h1 id = "perfume-new-price">$149.99</h1>
+        <h2 id = "perfume-new-price">$149.99</h2>
         <p id = "perfume-old-price">$169.99</p>
       </div>
-      <button id = "perfume-cart"><img src = "images/icon-cart.svg">Add to Cart</button>
+      <button id = "perfume-cart"><img src = "images/icon-cart.svg" alt = "cart-icon">Add to Cart</button>
   </section>
 </main>
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  <section class="attribution">
+    <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a></p>
+    <p>Coded by <a href="https://github.com/Lolito-Lindsey-Official/product-card">lolito-lindsey-official</a></p>
+  </section>
 </body>
 </html>
