--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
   </section>
 </main>
   
-  <section class="attribution">
+  <div class="attribution">
     <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a></p>
     <p>Coded by <a href="https://github.com/Lolito-Lindsey-Official/product-card">lolito-lindsey-official</a></p>
-  </section>
+  </div>
 </body>
 </html>
